--- a/my-ap2/src/components/rightbar/rightbar.css
+++ b/my-ap2/src/components/rightbar/rightbar.css
@@ -15,6 +15,7 @@
     width: 40px;
     height: 40px;
     margin-right: 10px;
+    cursor: pointer;
 
 }
 
@@ -39,6 +40,7 @@
     padding: 0;
     margin: 0;
     list-style: none;
+    cursor: pointer;
 
 }
 
